recursion.cons.nth.Nth.scala.error
Erreur de compilation :
Nth:4: error: illegal start of simple expression
  if()
     ^Nth:6: error: ')' expected but '}' found.
} 
^