recursion.cons.nth.Nth.scala.code
def nth(l:List[Int], n:Int): Int = {
  
  if()
  
}